[tool.poetry]
name = "actions-helper"
version = "0.1.0"
description = "Проект, который упрощает работу с GitHub Actions"
authors = ["temapskov <psk@ro.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
pydantic-settings = "^2.2.1"
uvicorn = "^0.29.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
